This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

24-Jan-2002 (Lars Duening)  (3.3.372)
  - (lex.c) Included #pragma xxx_types settings are no longer restricted
       to the include file's scope (reported by Gnomi).

24-Jan-2002 (Lars Duening)  (3.3.371)
  - (object.c) save/restore didn't look out for shared closures, which
       could lead to endless recursions.
  - (prolang.y) When compiling the context for inline closures, references
       to local variables (for initialisation) were already redirected
       into the closure.

23-Jan-2002 (Lars Duening)  (3.3.370)
  - (configure, ptmalloc.c) Not all systems provide pthread_atfork(),
       so configure now checks for it and activates a dummy if
       necessary.

23-Jan-2002 (Lars Duening)  (3.3.369)
  - (structs) Swapping structs during a GC triggered a sanity check
       in error (reported by Bardioc).

23-Jan-2002 (Lars Duening)  (3.3.368)
  - (xalloc.c) I confused two function arguments in the implementation
       of rexalloc() *blush*.

22-Jan-2002 (Lars Duening)  (3.3.367)
  - (prolang.y) The typetracking for assignments to a struct member
       was faulty (reported by Markus).

22-Jan-2002 (Lars Duening)  (3.3.366)
  - (xalloc.c) rexalloc() and malloc_increment_size() didn't update the
       xalloc_stat statistics, which could lead to a wrap-around of
       that number. Also, rexalloc() is now first trying a
       malloc_increment_size().

22-Jan-2002 (Lars Duening)  (3.3.365)
  - (efuns.c) Efun member() crashed when given a struct as second
       argument (reported by Markus).
  - (etc/lpc.xml) LPC syntax highlighting for KDE's kate (thanks, Menaures!)
  - (prolang.y, interpret.c, closure.c) Implemented struct lookups
       on 'mixed' expressions (suggested by Markus).

19-Jan-2002 (Lars Duening)  (3.3.364)
  - (configure) The '--with-malloc' option didn't quite work (reported
       by Nostradamus).
