@@ -55,12 +55,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 372)
-(Parent-Version lpmud 3-3 371)
-(Version-Log "Included #pragma xxx_types is no longer restricted to the include file's scope.")
+(Project-Version lpmud 3-3 373)
+(Parent-Version lpmud 3-3 372)
+(Version-Log "Corrected a string refcount error in and/or/xor_bits().")
 (New-Version-Log
 "")
-(Checkin-Time "Fri, 24 Jan 2003 22:54:37 -0700")
+(Checkin-Time "Sat, 25 Jan 2003 17:20:24 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -97,7 +97,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.57 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.435 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.436 644))
   (HISTORY (lpmud/f/49_HISTORY 1.297 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -158,7 +158,7 @@
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.7 644))
   (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.23 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
-  (src/bitstrings.c (lpmud/i/48_bitstrings 1.13 644))
+  (src/bitstrings.c (lpmud/i/48_bitstrings 1.14 644))
   (src/bytecode.h (lpmud/a/b/26_bytecode.h 1.1.1.1 644))
   (src/call_out.h (lpmud/f/45_call_out.h 1.7.1.6 644))
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.24 644))
@@ -172,7 +172,7 @@
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.27 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.19.1.1 644))
-  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.62 644))
+  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.63 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.5 644))
   (src/files.h (lpmud/i/49_files.h 1.2 644))
   (src/files.c (lpmud/i/50_files.c 1.19 644))
@@ -185,9 +185,9 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.8 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.3 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.35 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.14 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.15 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.3 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.44 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.45 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.12 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.32 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.14 644))
@@ -198,8 +198,8 @@
   (src/mempools.c (lpmud/d/49_mempools.c 1.2.1.5 644))
   (src/mregex.h (lpmud/e/29_rxcache.h 1.7.1.10 644))
   (src/mregex.c (lpmud/e/30_rxcache.c 1.11.1.27 644))
-  (src/mstrings.h (lpmud/i/35_mstrings.h 1.19 644))
-  (src/mstrings.c (lpmud/i/36_mstrings.c 1.21.1.18 644))
+  (src/mstrings.h (lpmud/i/35_mstrings.h 1.20 644))
+  (src/mstrings.c (lpmud/i/36_mstrings.c 1.21.1.19 644))
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19.1.1 644))
@@ -1335,7 +1335,7 @@
   (doc/LPC/mappings (lpmud/l/42_mappings 1.6 644))
   (doc/LPC/modifiers (lpmud/s/48_modifiers 1.8 644))
   (doc/LPC/operators (lpmud/m/0_operators 1.9.1.11 644))
-  (doc/LPC/pragma (lpmud/r/33_pragma 1.10 644))
+  (doc/LPC/pragma (lpmud/r/33_pragma 1.11 644))
   (doc/LPC/preprocessor (lpmud/r/34_preprocess 1.5 644))
   (doc/LPC/references (lpmud/c/48_references 1.3 644))
   (doc/LPC/structs (lpmud/a/b/16_structs 1.9 644))
